# better-option-result

./: Cargo.toml  README.md
src/: betteroption.rs  betterresult.rs  lib.rs
